fixed issues with all forms on mobile screens

--- a/src/public/css/admin/dash.css
+++ b/src/public/css/admin/dash.css
@@ -1,22 +1,94 @@
-#body {
+#body, a {
     background: none;
+    color: #666;
 }
-.mini-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 15px;
-    position: sticky;
-    top: 0;
+a {
+    text-decoration: none;
 }
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 15px;
+    flex-wrap: wrap;
+    padding: 20px 35px;
+    border-bottom: 1px solid #eee;
+}
+header h5 {
+    font-size: 1.1em;
+    font-weight: 500;
+}
+main {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+}
+main nav {
+    width: 15%;
+    height: 100vh;
+    padding: 10px 20px;
+    border-right: 3px solid #eee;
+    /* background-color: #eee; */
+}
+main nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main nav li {
+    list-style-type: none;
+    font-weight: 500;
+    margin: 10px 0;
+    width: 100%;
+}
+main nav li,
+main section div a {
+    padding: 8px 15px;
+}
+i {
+    margin-right: 10px;
+}
+main nav li:hover {
+    background-color: #555;
+    padding: 8px 15px;
+    border-radius: 6px;
+}
+main nav li:hover a,
+main nav li:hover i {
+    color: #fff;
+}
+main section {
+    /* display: flex; */
+    /* justify-content: space-around; */
+    width: 85%;
+    /* margin: 25px 0; */
+}
+.lib-headers {
+    display: flex;
+    justify-content: space-around;
+    /* width: 100%; */
+    margin: 25px 0;
+}
+.lib-headers a {
+    background-color: #555;
+    color: #fff;
+    border-radius: 6px;
 }
 
 footer {
     text-align: center;
     position: sticky;
     bottom: 0;
+}
+/* MEDIA QUERY FOR MOBILE/SMALL SCREE */
+@media (max-width: 480px) {
+    header {
+        padding: 20px 25px;
+    }
+    header h2 {
+        font-size: 1.1em;
+    }
+    header h5 {
+        font-size: 0.93em;
+    }
 }
