--- a/src/public/css/admin/form.css
+++ b/src/public/css/admin/form.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
     height: 100%;
     min-height: 100vh;
@@ -37,8 +37,9 @@ a {
     text-transform: uppercase;
     margin-bottom: 25px;
 }
-.msg h2, .error-msg {
-    color: #333;
+.msg, .fa-eye, .fa-eye-slash,
+.btn input[type="button"], .otp-info {
+  color: #555;
 }
 .input-syle {
     position: absolute;
@@ -48,11 +49,10 @@ input {
 }
 .input-style input {
     width: 100%;
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     border-radius: 6px;
     padding: 12px 40px 12px 12px;
     font-size: 14px;
-    /* font-weight: 500; */
     outline: none;
 }
 .fa-eye, .fa-eye-slash {
@@ -60,7 +60,6 @@ input {
     position: relative;
     top: -45px;
     left: 90%;
-    color: #555;
 }
 .btn {
   display: flex;
@@ -73,24 +72,23 @@ input {
   width: 100%;
   padding: 12px;
   border: none;
-  border-radius: 6px;
+  border-radius: 20px;
   cursor: pointer;
   font-size: 15px;
   transition: background 0.3s;
 }
 
 .btn input[type="submit"] {
-  background-color: #333;
+  background-color: #4c0ff5;
   color: #fff;
 }
 
 .btn input[type="submit"]:hover {
-  background-color: #111;
+  background-color: #3e04c5;
 }
 
 .btn input[type="button"] {
   background-color: #eee;
-  color: #333;
 }
 
 .btn input[type="button"]:hover {
@@ -101,7 +99,6 @@ input {
 .otp-info {
   text-align: center;
   margin-bottom: 15px;
-  color: #333;
   font-size: 14px;
 }
 
@@ -132,8 +129,17 @@ input {
 
 /* Responsive adjustments */
 @media (max-width: 480px) {
+   body {
+    overflow: auto; /* allow scrolling */
+  }
+
+  #form-content {
+    min-height: calc(100vh - 40px); /* remove the forced full height */
+    padding: 40px 20px; /* give breathing room */
+  }
+
   #form {
-    padding: 30px 13px;
+    margin-bottom: 40px; /* ensures footer sits below */
   }
 
   .msg h2 {
